# LuisaRender

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md  build.md  main.cpp  main.mm  pyproject.toml  run.bat
kernels/: CMakeLists.txt  accumulation.metal  build_kernels.py  build_metal_kernels.py  camera::pinhole.sk  compatibility.h  film.metal  film.sk  filter::separable.sk  illumination.sk  integrator::normal.sk  light::diffuse_area.sk  mirror.metal  mitchell_netravali_filter.metal  path_tracing.metal  pinhole_camera.metal  rgb_film.metal  sampler::independent.sk  thin_lens_camera.metal
kernels/metal/: CMakeLists.txt  camera.metal  compatibility.h  diffuse_area_light.metal  film.metal  geometry.metal  illumination.metal  independent_sampler.metal  mitchell_netravali_filter.metal  normal_visualizer.metal  pinhole_camera.metal  point_light.metal  rgb_film.metal  scene.metal  separable_filter.metal  test.metal  thin_lens_camera.metal
src/: CMakeLists.txt  address_spaces.h  camera.cpp  camera.h  camera_data.h  color_spaces.h  compatibility.h  device.cpp  device.h  frame_data.h  intersection_data.h  light_data.h  luminance.h  material.cpp  material.h  material_data.h  mesh.cpp  mesh.h  onb.h  random.h  ray_data.h  sampling.h
src/apps/: CMakeLists.txt  cli.cpp  compute.cpp  export.cpp  main.cpp  megakernel_path_tracing.cpp
src/autodiff/: CMakeLists.txt  node_ad.cpp  node_ad.h
src/backends/: CMakeLists.txt
src/base/: CMakeLists.txt  camera.cpp  camera.h  differentiation.cpp  differentiation.h  display.cpp  display.h  environment.cpp  environment.h  film.cpp  film.h  filter.cpp  filter.h  geometry.cpp  geometry.h  grad_integrator.cpp  grad_integrator.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  light.cpp  light.h  light_sampler.cpp  light_sampler.h  loss.cpp  loss.h  material.cpp  material.h  medium.cpp  medium.h  optimizer.cpp  optimizer.h  phase_function.cpp  phase_function.h  pipeline.cpp  pipeline.h  sampler.cpp  sampler.h  scene.cpp  (+23 more)
src/bsdfs/: lambertian_reflection.cpp  lambertian_reflection.h
src/cameras/: CMakeLists.txt  ortho.cpp  pinhole.cpp  pinhole.h  pinhole_camera.cpp  pinhole_camera.h  thin_lens.cpp  thin_lens.h  thin_lens_camera.cpp  thin_lens_camera.h  thinlens.cpp
src/compute/: CMakeLists.txt  acceleration.h  buffer.h  codegen.cpp  codegen.h  device.cpp  device.h  dispatcher.cpp  dispatcher.h  dsl.h  dsl_syntax.h  dummy.cpp  expr_helpers.h  expr_util.h  expression.cpp  expression.h  function.cpp  function.h  hit.h  kernel.cpp  kernel.h  mathematics.h  pipeline.h  primitive.h  ray.h  scalar.h  statement.cpp  statement.h  stmt_helpers.h  stmt_util.h  texture.cpp  texture.h  type_desc.h  variable.cpp  variable.h
src/core/: CMakeLists.txt  acceleration.h  appearance.h  atomic_util.h  bsdf.h  buffer.cpp  buffer.h  camera.cpp  camera.h  color.h  color_spaces.h  colorspaces.h  concepts.h  context.cpp  context.h  data_types.h  device.cpp  device.h  dll.h  film.h  filter.cpp  filter.h  geometry.cpp  geometry.h  halton_sampler.cpp  halton_sampler.h  hash.cpp  hash.h  hit.h  illumination.cpp  illumination.h  integrator.h  interaction.h  intersection.h  kernel.cpp  kernel.h  light.cpp  light.h  logging.cpp  logging.h  (+39 more)
src/environments/: CMakeLists.txt  black.cpp  combined.cpp  constant.cpp  directional.cpp  hdri.cpp  map.cpp  nishita.cpp  null.cpp  spherical.cpp
src/ext/: CMakeLists.txt  tinyexr.cpp
src/films/: CMakeLists.txt  atomic_color.cpp  color.cpp  display.cpp  rgb.cpp  rgb.h  rgb_film.cpp  rgb_film.h
src/filters/: CMakeLists.txt  box.cpp  box_filter.cpp  gaussian.cpp  gaussian_filter.cpp  lanczos_sinc.cpp  lanczos_sinc_filter.cpp  mitchell.cpp  mitchell_netravali.cpp  mitchell_netravali_filter.cpp  mitchell_netravali_filter.h  triangle.cpp
src/integrators/: CMakeLists.txt  ao.cpp  aov.cpp  auxpath.cpp  direct.cpp  gpt.cpp  group.cpp  mega_grad_radiative.cpp  mega_path.cpp  mega_path_dx.cpp  mega_path_grad.cpp  mega_radiative_diff.cpp  mega_replay_diff.cpp  mega_vpt.cpp  mega_vpt_naive.cpp  mega_wave.cpp  megakernel_grad.cpp  megakernel_path.cpp  megakernel_path_tracing.cpp  megapm.cpp  megapm_diff.cpp  megapm_importon.cpp  megawave.cpp  normal.cpp  normal.h  normal_visualizer.cpp  normal_visualizer.h  path.cpp  path.h  path_tracing.cpp  path_tracing.h  pssmlt.cpp  pssmlt_opt.cpp  wave_path.cpp  wave_path_opt.cpp  wave_path_readback.cpp  wave_path_v2.cpp
src/kernels/: CMakeLists.txt  camera.sk  camera::thin_lens.sk  camera__pinhole.sk  camera__thin_lens.sk  film.sk  film::rgb.sk  film__rgb.sk  filter__separable.sk  geometry.sk  illumination.sk  integrator__normal.sk  light::point.sk  light__diffuse_area.sk  light__point.sk  sampler::independent.sk  sampler__independent.sk
src/lightdists/: CMakeLists.txt  uniform.cpp
src/lights/: CMakeLists.txt  black.cpp  diffuse.cpp  diffuse_area.cpp  diffuse_area.h  diffuse_area_light.cpp  diffuse_area_light.h  fake_point.cpp  null.cpp  point.cpp  point.h  point_light.cpp  point_light.h
src/lightsamplers/: CMakeLists.txt  uniform.cpp
src/losses/: CMakeLists.txt  L1.cpp  L2.cpp  l2.cpp
src/materials/: CMakeLists.txt  black.cpp  fake_mirror.cpp  lambert.cpp  mix.cpp
src/media/: CMakeLists.txt  homogeneous.cpp  null.cpp  vacuum.cpp
src/optimizer/: CMakeLists.txt
src/optimizers/: Adam.cpp  CMakeLists.txt  GD.cpp  adam.cpp  gd.cpp
src/phasefunctions/: CMakeLists.txt  henyey_greenstein.cpp  isotropic.cpp
src/pipeline/: CMakeLists.txt  instance.h  pipeline.cpp  pipeline.h  pipeline_data.cpp  pipeline_data.h
src/python/: CMakeLists.txt  bak.rb  lrapi.cpp  render_python.cpp  test.cpp
src/render/: CMakeLists.txt  acceleration.cpp  acceleration.h  appearance.cpp  appearance.h  background.cpp  background.h  bsdf.h  camera.cpp  camera.h  colorspaces.h  data_block.h  film.h  filter.cpp  filter.h  frame_data.h  geometry.cpp  geometry.h  hit.h  illumination.cpp  illumination.h  integrator.h  interaction.cpp  interaction.h  light.h  material.cpp  material.h  material_handle.h  onb.h  parser.cpp  parser.h  pipeline.cpp  pipeline.h  plugin.cpp  plugin.h  (+15 more)
(+427 files in other folders)
