add_library(luisa-render-environments INTERFACE)
luisa_render_add_plugin(null CATEGORY environment SOURCES null.cpp)
luisa_render_add_plugin(spherical CATEGORY environment SOURCES spherical.cpp)
luisa_render_add_plugin(directional CATEGORY environment SOURCES directional.cpp)
luisa_render_add_plugin(combined CATEGORY environment SOURCES combined.cpp)
